[package]
name = "wa-dsp"
version = "0.1.0"
authors = ["cho45 <cho45@lowreal.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib"]

#[profile.release]
#debug = true

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = { version = "*", optional = true }
rustfft = "*"
console_error_panic_hook = "*"

